Fix scrollbar styling on newer versions of Firefox

--- a/public/style.css
+++ b/public/style.css
@@ -552,6 +552,8 @@ header a[href="#settings"] {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  scrollbar-color: white transparent;
+  scrollbar-width: thin;
 }
 
 #all-guesses .player-guesses {
